# aapp-toolkit

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum
attestation/: Cargo.toml
attestation-maa/web-verifier/: index.html
attestation/tdx/: Cargo.toml
attestation/tdx-wasm/: Cargo.toml
attestation/tdx-wasm/example/: index.html
attestation/tdx-wasm/js/: README.md  tdx-quote.js
attestation/tdx-wasm/src/: lib.rs
attestation/tdx/automata/: attestation.rs
attestation/tdx/examples/: attestation.rs
azure-attestation/app/: CMakeLists.txt  main.cpp  pre-requisites.sh
azure-attestation/scripts/: token.sh
azure-attestation/web/: index.html
bootstrap/: CMakeLists.txt  Dockerfile  init.sh  main.cpp  package.json  server.js
bootstrapper/cmd/bootstrapper-cli/: BUILD.bazel  main.go
bootstrapper/cmd/bootstrapper-service/: BUILD.bazel  main.go
docs/: APPMANIFEST.md  ONCHAINATTESTATION.md
image/: cloud-init-with-ssh.yml  cloud-init.yml  reference.json
ingress/: default.conf
mesh/: Dockerfile  main.go
mesh/pkg/certmanager/: certmanager.go
mesh/pkg/proxy/: proxy.go
terraform/azure/: awesome-aap.yaml  main.tf  outputs.tf  variables.tf
workflow/: README.md  action.yml  dns-challenge-webhook.sh  dns-hook.sh  entrypoint.sh  parameters.json  template.json
