[package]
name = "tdx-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
dcap-rs = "0.1.0"
hex = "0.4"
base64 = "0.21"
sha2 = { version = "0.10", default-features = false, features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }
