load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bootstrapper-cli_lib",
    srcs = ["main.go"],
    importpath = "github.com/comrade-coop/aapp-toolkit/bootstrapper/cmd/bootstrapper-cli",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "bootstrapper-cli",
    embed = [":bootstrapper-cli_lib"],
    visibility = ["//visibility:public"],
)
