load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "bootstrapper-service_lib",
    srcs = ["main.go"],
    importpath = "github.com/comrade-coop/aapp-toolkit/bootstrapper/cmd/bootstrapper-service",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_gorilla_mux//:mux",
    ],
)

go_binary(
    name = "bootstrapper-service",
    embed = [":bootstrapper-service_lib"],
    visibility = ["//visibility:public"],
)
